server-rs/test_results_v3.txt
   Compiling server-rs v1.0.0 (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\server-rs)
warning: unused import: `serde_json::Value`
 --> src\main.rs:3:5
  |
3 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `serde_json::Value`
  --> src\state.rs:11:5
   |
11 | use serde_json::Value;
   |     ^^^^^^^^^^^^^^^^^

warning: unused import: `opentelemetry::trace::TraceContextExt`
  --> src\agent\runner\mod.rs:65:17
   |
65 |             use opentelemetry::trace::TraceContextExt;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::telemetry::TelemetryLayer`
 --> src\startup.rs:2:5
  |
2 | use crate::telemetry::TelemetryLayer;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `tokio::sync::broadcast`
 --> src\startup.rs:3:5
  |
3 | use tokio::sync::broadcast;
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `serde_json::json`
 --> src\telemetry.rs:4:5
  |
4 | use serde_json::json;
  |     ^^^^^^^^^^^^^^^^

error[E0560]: struct `TaskPayload` has no field named `skills`
   --> src\agent\runner\mod.rs:658:25
    |
658 |                         skills: None, // Added
    |                         ^^^^^^ `TaskPayload` does not have this field
    |
    = note: all struct fields are already assigned

error[E0560]: struct `TaskPayload` has no field named `workflows`
   --> src\agent\runner\mod.rs:659:25
    |
659 |                         workflows: None, // Added
    |                         ^^^^^^^^^ `TaskPayload` does not have this field
    |
    = note: all struct fields are already assigned

error[E0063]: missing field `traceparent` in initializer of `runner::RunContext`
   --> src\agent\runner\synthesis.rs:257:23
    |
257 |         let mut ctx = RunContext {
    |                       ^^^^^^^^^^ missing `traceparent`

error[E0063]: missing field `traceparent` in initializer of `runner::RunContext`
   --> src\agent\runner\tools.rs:693:19
    |
693 |         let ctx = RunContext {
    |                   ^^^^^^^^^^ missing `traceparent`

error[E0560]: struct `TaskPayload` has no field named `skills`
   --> src\agent\runner\mod.rs:829:13
    |
829 |             skills: None,
    |             ^^^^^^ `TaskPayload` does not have this field
    |
    = note: all struct fields are already assigned

error[E0560]: struct `TaskPayload` has no field named `workflows`
   --> src\agent\runner\mod.rs:830:13
    |
830 |             workflows: None,
    |             ^^^^^^^^^ `TaskPayload` does not have this field
    |
    = note: all struct fields are already assigned

warning: unused variable: `span`
  --> src\telemetry.rs:79:13
   |
79 |         let span = ctx.span(&id).expect("Span not found");
   |             ^^^^ help: if this is intentional, prefix it with an underscore: `_span`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0063, E0560.
For more information about an error, try `rustc --explain E0063`.
warning: `server-rs` (bin "server-rs" test) generated 7 warnings
error: could not compile `server-rs` (bin "server-rs" test) due to 6 previous errors; 7 warnings emitted
